--- a/_pages/links.html
+++ b/_pages/links.html
@@ -14,7 +14,7 @@ permalink: /links
 </li>
 
 <li>
-    <h4><a href="http://rshi-tuva.ru/" >Группа Gen-Dos в контакте</a> </h4>
+    <h4><a href="https://vk.com/club50338197" >Группа Gen-Dos в контакте</a> </h4>
     <p>
     Группа которую создал Геннадий, участник группы Менги.
     </p>
