change schema to https

--- a/_pages/about.html
+++ b/_pages/about.html
@@ -11,6 +11,6 @@ comments: true
 
 <p>
 Вы можете также найти меня на социальных ресурсах:  <br>
-<a href="http://github.com/tako-a">
+<a href="https://github.com/tako-a">
 			<i class="fa fa-github fa-3x"></i></a>
 </p>
